; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pnp/extr_card.c_pnp_free_card_ids.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pnp/extr_card.c_pnp_free_card_ids.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pnp_card = type { %struct.pnp_id* }
%struct.pnp_id = type { %struct.pnp_id* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pnp_card*)* @pnp_free_card_ids to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pnp_free_card_ids(%struct.pnp_card* %0) #0 {
  %2 = alloca %struct.pnp_card*, align 8
  %3 = alloca %struct.pnp_id*, align 8
  %4 = alloca %struct.pnp_id*, align 8
  store %struct.pnp_card* %0, %struct.pnp_card** %2, align 8
  %5 = load %struct.pnp_card*, %struct.pnp_card** %2, align 8
  %6 = getelementptr inbounds %struct.pnp_card, %struct.pnp_card* %5, i32 0, i32 0
  %7 = load %struct.pnp_id*, %struct.pnp_id** %6, align 8
  store %struct.pnp_id* %7, %struct.pnp_id** %3, align 8
  br label %8

8:                                                ; preds = %11, %1
  %9 = load %struct.pnp_id*, %struct.pnp_id** %3, align 8
  %10 = icmp ne %struct.pnp_id* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %8
  %12 = load %struct.pnp_id*, %struct.pnp_id** %3, align 8
  %13 = getelementptr inbounds %struct.pnp_id, %struct.pnp_id* %12, i32 0, i32 0
  %14 = load %struct.pnp_id*, %struct.pnp_id** %13, align 8
  store %struct.pnp_id* %14, %struct.pnp_id** %4, align 8
  %15 = load %struct.pnp_id*, %struct.pnp_id** %3, align 8
  %16 = call i32 @kfree(%struct.pnp_id* %15)
  %17 = load %struct.pnp_id*, %struct.pnp_id** %4, align 8
  store %struct.pnp_id* %17, %struct.pnp_id** %3, align 8
  br label %8

18:                                               ; preds = %8
  ret void
}

declare dso_local i32 @kfree(%struct.pnp_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
